<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="julius.barde.com.easycalc.MainActivity">

    <EditText
        android:id="@+id/firstNum_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/fNum"
        android:inputType="number"
        />

    <EditText
        android:id="@+id/secondNum_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:hint="@string/sNum"
        android:inputType="number" />
    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/text_result"
        android:textSize="36dp"
        android:textAlignment="center"
        android:id="@+id/result_btn"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/first_Linear"
        android:layout_below="@+id/result_btn"
        android:layout_centerInParent="true"
        >

        <Button
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/plus"
            android:onClick="add"
            android:textSize="40sp"

            />

        <Button
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            android:text="@string/minus"
            android:onClick="minus"
            android:textSize="40sp"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginRight="16dp"
            android:onClick="clear"
            android:text="@string/clears"
            android:textSize="40sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/first_Linear"
        android:layout_centerInParent="true"
        android:textSize="40sp"
        >

        <Button
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:onClick="multiply"
            android:text="@string/multiply"
            android:textSize="40sp"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginRight="10dp"
            android:onClick="divide"
            android:text="@string/divide"
            android:textSize="40sp"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginRight="16dp"
            android:onClick="exit"
            android:text="@string/exit"
            android:textSize="30sp"
            />

    </LinearLayout>
</RelativeLayout>
</LinearLayout>
